--- a/app.css
+++ b/app.css
@@ -47,7 +47,7 @@ header {
   flex-direction: column;
   justify-content: center;
   height: 480px;
-  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
+  text-shadow: 3px 4px 3px rgba(0, 0, 0, 1),
                 0px 8px 13px rgba(0, 0, 0, 0.1),
 			    0px 18px 23px rgba(0, 0, 0, 0.1);
 }
@@ -75,7 +75,7 @@ header {
       justify-content: center;
       margin: auto;
       height: 480px;
-      text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
+      text-shadow: 3px 4px 3px rgba(0, 0, 0, 1),
                 0px 8px 13px rgba(0, 0, 0, 0.1),
 			    0px 18px 23px rgba(0, 0, 0, 0.1);
     }
@@ -114,7 +114,7 @@ h1 {
 
 .about-section > .container > .item > .icon > i {
     font-size: 48px;
-	color: #aaa;
+	color: #e95d3c;
 }
 
 .about-section > .container > .item > .icon> .about {
