--- a/app.css
+++ b/app.css
@@ -11,7 +11,7 @@ nav {
 }
 
 header {
-  background-image: url("imgs/landing_img.jpg");
+  background-image: url("imgs/landing_img_2.jpg");
   background-position: center top;
   background-attachment: fixed;
   background-size: 100%;
