--- a/app.css
+++ b/app.css
@@ -29,9 +29,8 @@ header {
   background-size: 100%;
   background-repeat: no-repeat;
   cursor: context-menu;
-  border-left: 54px solid #e77d19;
-  padding-right: 54px;
-  margin-bottom: 15px;
+  border-left: 40px solid #e77d19;
+  padding-right: 40px;  
 }
 
 @media only screen
@@ -117,7 +116,7 @@ h1 {
   text-align: center;
   border-bottom : 20px solid #e77d19;
   margin-bottom : 20px;
-  padding-bottom : 20px;
+  padding : 25px 0;
   flex-direction: row;
 }
 
