--- a/app.css
+++ b/app.css
@@ -6,6 +6,7 @@ body {
     
 }
 
+/* css for navBar */
 nav {
     font-weight: 400;
 }
@@ -22,8 +23,10 @@ nav {
     box-shadow: none;
 }
 
+/* css for header/landing */
+
 header {
-  background-image: url("imgs/pexels-karol-d-841228.jpg");
+  background-image: url("imgs/landing.jpg");
   background-position: center top;
   background-attachment: fixed;
   background-size: 100%;
@@ -45,6 +48,7 @@ header {
     }
 
 }
+
 
 .mainheader {
   width: 50%;
@@ -114,15 +118,30 @@ h1 {
   color: white;
 }
 
+/* css for about section */
+
 .about-section > .container {
   text-align: center;
-  border-bottom : 20px solid #e77d19;
+  /* border-bottom : 20px solid #e77d19; */
   margin-bottom : 20px;
   padding : 25px 0;
   flex-direction: row;
 }
 
-.about-section > .container > .item {
+.about-section > .container > .row > .aName {
+  font-family : 'Lato', sans-serif;
+  font-size : 64px;
+  font-weight : 600;
+  line-height: 1.3em;
+  letter-spacing: .03em;
+  /* width: 50%; */
+  text-align: center;
+  padding : 50px 0 5px 0;
+  border-bottom : 10px solid #e77d19;  
+  margin-bottom: 50px;
+}
+
+.about-section > .container > .itemBox > .item {
 	height : auto;
 	background-color: white;
 	padding : 20px;
@@ -130,24 +149,25 @@ h1 {
 	transition : all 0.5s ease;
 }
 
-.about-section > .container > .item:hover {
+.about-section > .container > .itemBox > .item:hover {
 	transform: scale(1.015);
 	box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
-.about-section > .container > .item > .icon > i {
-  font-size: 48px;
+.about-section > .container > .itemBox > .item > .icon > i {
+  font-size: 60px;
   color: #e95d3c;
   text-align: center;
 }
 
-.about-section > .container > .item > .icon> .about {
+.about-section > .container > .itemBox > .item > .icon> .about {
+  font-family : 'Lato', sans-serif;
 	font-size: 32px;
 	font-weight: bold;
 	padding: 10px 0;
 }
 
-.about-section > .container > .item > .content {
+.about-section > .container > .itemBox > .item > .content {
 	font-size : 16px;
 	letter-spacing : 1.5px;
   padding : 10px 0;
@@ -156,63 +176,247 @@ h1 {
 
 @media only screen
   and (max-width: 750px) {
-  .about-section > .container {
+  .about-section > .container > .itemBox {
     flex-direction : column;
     margin: 0 auto;
   }
 }
 
+/* css for technical skills */
+
+.technicalSkills {
+  background-color: #27211b;
+  background-size: cover;
+  background-position: center center;
+  border-top: 20px solid #e77d19;
+}
+
 .technicalSkills > .container {
-  text-align: left;
+  color: white;
 }
-.technicalSkills > .container > .tcName {
-  font-size : 32px;
+
+.technicalSkills > .container > .row > .tsName {
+  font-family : 'Lato', sans-serif;
+  font-size : 64px;
   font-weight : 600;
-  padding : 10px 0;
+  line-height: 1.3em;
+  letter-spacing: .03em;
+  /* width: 50%; */
+  text-align: center;
+  padding : 50px 0 5px 0;
+  border-bottom : 10px solid #e77d19;  
+  margin-bottom: 50px;
 }
 
-.technicalSkills > .container > .tcGroup {
+.technicalSkills > .container > .row > .item {
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.technicalSkills > .container > .row > .item > img {
+  padding: 5px;
+}
+
+.technicalSkills > .container > .row > .item > .skillType {
+  font-family : 'Lato', sans-serif;
+	font-size: 40px;
+	font-weight: bold;
+  padding: 10px 0;
+  text-align: center;
+}
+
+.technicalSkills > .container > .row > .item > .skillType > .fa-file-code {
+  font-size: 60px;
+  color:  #e77d19;
+  padding-right: 5px;
+}
+
+.technicalSkills > .container > .row > .item > .skillType > .fa-camera {
+  font-size: 60px;
+  color:  #e77d19;
+  padding-right: 5px;
+}
+
+.technicalSkills > .container > .row > .item > .skillType > .fa-laptop {
+  font-size: 60px;
+  color:  #e77d19;
+  padding-right: 5px;
+}
+
+.technicalSkills > .container > .row > .item > .skillType > .fa-drafting-compass {
+  font-size: 60px;
+  color:  #e77d19;
+  padding-right: 5px;
+}
+
+/* css for experience section */
+
+.xPerience > .row > .xpName {
+  font-family : 'Lato', sans-serif;
+  font-size : 64px;
+  font-weight : 600;
+  line-height: 1.3em;
+  letter-spacing: .03em;
+  /* width: 50%; */
+  text-align: center;
+  padding : 50px 0 5px 0;
+  border-bottom : 10px solid #e77d19;  
+  margin-bottom: 10px;
+}
+
+.xPerience > .container-fluid {
+  padding: 40px 0 0 0;
+}
+
+.xPerience > .container-fluid > .row {
+  width: 100%;
+  margin-left: 0px;
+}
+
+.xPerience > .container-fluid > .row > .expBox {
+  position: relative;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+.xPerience > .container-fluid > .row > .expBox > img {
+  display: block;
+  max-height: 400px;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.xPerience > .container-fluid > .row > .expBox > .overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left:0;
+  top:0;
+  background-color: rgba(255, 255, 255, 0);
+  transition: 200ms;
+  opacity: 0;
+  display:flex;
+  text-align: center;
   justify-content: center;
-  padding-left : 10%;
+  flex-direction: column;
+  align-items: center;
+  font-weight: bold;
 }
 
-.technicalSkills > .container > .tcGroup > .skillsRow {
-  display : flex;
-  flex-direction : row;
-  justify-content : left;
-  text-align : center;
+.xPerience > .container-fluid > .row > .expBox > .overlay:hover {
+  background-color: rgba(255, 255, 255, 0.75);
+  opacity: 1;
+
+  display: flex;
+  text-align: center;
+  display:flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  letter-spacing: 2px;  
 }
 
-.technicalSkills > .container > .tcGroup > .skillsRow > p {
-  border: 1px solid;
-  border-radius : 2px;
-  margin : 5px;
-  padding : 5px 15px;
-  background-color : white;
-  border-color : white;
-  font-weight : bold;
-  transition : all 0.5s ease;
+.xPerience > .container-fluid > .row > .expBox > .overlay > h3 {
+  font-weight: bold;
+  font-size: 30px;
+  margin-top: 10px;
 }
 
-.technicalSkills > .container > .tcGroup > .skillsRow > .skillType {
-  background-color :  #e77d19;
-  border-color :  #e77d19;
+.xPerience > .container-fluid > .row > .expBox > .overlay > h3:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 60%;
+  padding: 5px;
+  border-bottom: 3px solid#e77d19;
 }
 
-@media only screen and (max-width: 1280px) {
-  .technicalSkills > .container > .tcGroup {
-    padding-left: 0;
-  }
+.xPerience > .container-fluid > .row > .expBox > .overlay > p {
+  font-size: 15px;
+  padding: 0 40px;
 }
 
 @media only screen and (max-width: 750px) {
-  .technicalSkills > .container > .tcGroup {
-    padding-left: 0;
+  .xPerience > .container-fluid > .row > .expBox > .overlay {
+    height : 100%;
   }
 
-  .technicalSkills > .container > .tcGroup > .skillsRow {
-    flex-direction: column;
-    width : 60%;
-    margin : auto;
+  .xPerience > .container-fluid > .row > .expBox > img {
+    height : 350px;
   }
+}
+
+/* css for contact section */
+
+.contactSection {
+  background-image: url("imgs/picturebottom.jpg");
+  background-position: center top;
+  /* background-attachment: fixed; */
+  background-size: 100%;
+  background-repeat: no-repeat;
+  /* cursor: context-menu; */
+  height: 450px;
+  border-right: 40px solid #e77d19;
+  padding-left: 40px;  
+}
+
+.contactSection > .container {
+  color : white;
+}
+
+.contactSection > .container > .cName {
+  font-family : 'Lato', sans-serif;
+  font-size : 64px;
+  font-weight : 600;
+  line-height: 1.3em;
+  letter-spacing: .03em;
+  width: 30%;
+  padding : 50px 0 5px 0;
+  border-bottom : 10px solid #e77d19;
+}
+
+.contactSection > .container > .contIcons {
+  font-size: 60px;
+  text-align: left;
+  text-decoration: none;
+  padding: 5px;
+}
+
+/* color change for contact icons */
+.contactSection > .container > .contIcons > .fa-linkedin {
+  color: white;
+}
+
+.contactSection > .container > .contIcons > .fa-github-square {
+  color: white;
+}
+
+.contactSection > .container > .contIcons > .fa-envelope-square {
+  color: white;
+}
+
+.contactSection > .container > .contMessage {
+  font-family : 'Lato', sans-serif;
+  text-align: right;
+  font-size: 34px;
+  padding-right: 30px;
+  line-height: .8em;
+}
+
+@media only screen
+  and (max-width: 750px) {
+    .contactSection {
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      border-right: 20px solid #e77d19;
+      padding-left: 0;
+    }
+
+    .contactSection > .container > .cName {
+      width : 60%;
+    }
+
 }
