--- a/app.css
+++ b/app.css
@@ -173,7 +173,7 @@ h1 {
 	font-size : 16px;
 	letter-spacing : 1.5px;
   padding : 10px 0;
-  text-align : left;
+  text-align : center;
 }
 
 @media only screen
