--- a/app.css
+++ b/app.css
@@ -258,8 +258,7 @@ h1 {
   font-size : 64px;
   font-weight : 600;
   line-height: 1.3em;
-  letter-spacing: .03em;
-  /* width: 50%; */
+  /* letter-spacing: 0.2em; */
   text-align: center;
   padding : 50px 0 5px 0;
   border-bottom : 10px solid #e77d19;  
