--- a/src/App.css
+++ b/src/App.css
@@ -555,6 +555,16 @@ video {
 }
 
 *, ::before, ::after {
+	--tw-translate-x: 0;
+	--tw-translate-y: 0;
+	--tw-rotate: 0;
+	--tw-skew-x: 0;
+	--tw-skew-y: 0;
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+	--tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+	--tw-border-opacity: 1;
+	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 	--tw-shadow: 0 0 #0000;
@@ -592,6 +602,9 @@ video {
 		max-width: 1536px;
 	}
 }
+.pointer-events-none {
+	pointer-events: none;
+}
 .fixed {
 	position: fixed;
 }
@@ -610,17 +623,45 @@ video {
 	bottom: 0px;
 	left: 0px;
 }
+.inset-x-0 {
+	left: 0px;
+	right: 0px;
+}
 .top-0 {
 	top: 0px;
-}
-.right-0 {
-	right: 0px;
 }
 .bottom-0 {
 	bottom: 0px;
 }
+.right-0 {
+	right: 0px;
+}
 .z-50 {
 	z-index: 50;
+}
+.col-span-2 {
+	grid-column: span 2 / span 2;
+}
+.col-span-1 {
+	grid-column: span 1 / span 1;
+}
+.col-start-4 {
+	grid-column-start: 4;
+}
+.col-start-2 {
+	grid-column-start: 2;
+}
+.row-span-2 {
+	grid-row: span 2 / span 2;
+}
+.row-start-2 {
+	grid-row-start: 2;
+}
+.row-start-3 {
+	grid-row-start: 3;
+}
+.row-start-4 {
+	grid-row-start: 4;
 }
 .mx-auto {
 	margin-left: auto;
@@ -639,12 +680,6 @@ video {
 .mr-4 {
 	margin-right: 1rem;
 }
-.mr-6 {
-	margin-right: 1.5rem;
-}
-.mb-1 {
-	margin-bottom: 0.25rem;
-}
 .mt-2 {
 	margin-top: 0.5rem;
 }
@@ -657,6 +692,9 @@ video {
 .flex {
 	display: flex;
 }
+.grid {
+	display: grid;
+}
 .hidden {
 	display: none;
 }
@@ -665,6 +703,9 @@ video {
 }
 .h-screen {
 	height: 100vh;
+}
+.h-8 {
+	height: 2rem;
 }
 .min-h-85v {
 	min-height: 85vh;
@@ -681,20 +722,48 @@ video {
 .w-1\/2 {
 	width: 50%;
 }
-.w-7 {
-	width: 1.75rem;
+.w-8 {
+	width: 2rem;
 }
-.flex-shrink-0 {
-	flex-shrink: 0;
+.-skew-y-12 {
+	--tw-skew-y: -12deg;
+	transform: var(--tw-transform);
 }
-.flex-grow {
-	flex-grow: 1;
+.transform {
+	transform: var(--tw-transform);
+}
+@keyframes pulse {
+
+	50% {
+		opacity: .5;
+	}
+}
+.animate-pulse {
+	animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+@keyframes bounce {
+
+	0%, 100% {
+		transform: translateY(-25%);
+		animation-timing-function: cubic-bezier(0.8,0,1,1);
+	}
+
+	50% {
+		transform: none;
+		animation-timing-function: cubic-bezier(0,0,0.2,1);
+	}
+}
+.animate-bounce {
+	animation: bounce 1s infinite;
 }
 .cursor-pointer {
 	cursor: pointer;
 }
-.flex-row {
-	flex-direction: row;
+.grid-cols-4 {
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.grid-rows-4 {
+	grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 .flex-wrap {
 	flex-wrap: wrap;
@@ -705,11 +774,11 @@ video {
 .justify-center {
 	justify-content: center;
 }
-.justify-between {
-	justify-content: space-between;
-}
 .self-center {
 	align-self: center;
+}
+.overflow-hidden {
+	overflow: hidden;
 }
 .rounded-full {
 	border-radius: 9999px;
@@ -717,13 +786,32 @@ video {
 .rounded-lg {
 	border-radius: 0.5rem;
 }
+.border {
+	border-width: 1px;
+}
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
 .bg-black {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
+.bg-gray-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.bg-gray-800 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
 .bg-white {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-red-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
 }
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
@@ -744,13 +832,17 @@ video {
 .p-2 {
 	padding: 0.5rem;
 }
-.px-3 {
-	padding-left: 0.75rem;
-	padding-right: 0.75rem;
+.px-2 {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
 }
 .py-2 {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
+}
+.px-3 {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
 }
 .py-4 {
 	padding-top: 1rem;
@@ -764,21 +856,6 @@ video {
 }
 .pb-8 {
 	padding-bottom: 2rem;
-}
-.pl-6 {
-	padding-left: 1.5rem;
-}
-.pt-1 {
-	padding-top: 0.25rem;
-}
-.pr-4 {
-	padding-right: 1rem;
-}
-.pt-3 {
-	padding-top: 0.75rem;
-}
-.pb-2 {
-	padding-bottom: 0.5rem;
 }
 .text-center {
 	text-align: center;
@@ -797,17 +874,13 @@ video {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
 }
-.text-xl {
-	font-size: 1.25rem;
-	line-height: 1.75rem;
-}
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
-.text-sm {
-	font-size: 0.875rem;
-	line-height: 1.25rem;
+.text-xl {
+	font-size: 1.25rem;
+	line-height: 1.75rem;
 }
 .font-bold {
 	font-weight: 700;
@@ -842,10 +915,6 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(220, 38, 38, var(--tw-text-opacity));
 }
-.text-black {
-	--tw-text-opacity: 1;
-	color: rgba(0, 0, 0, var(--tw-text-opacity));
-}
 .opacity-90 {
 	opacity: 0.9;
 }
@@ -863,12 +932,25 @@ video {
 .delay-150 {
 	transition-delay: 150ms;
 }
-.duration-500 {
-	transition-duration: 500ms;
-}
 .ease-in {
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+.animation-1-3 {
+    animation-delay: 1s;
+    animation-duration: 3s;
+  }
+.animation-3-5 {
+    animation-delay: 3s;
+    animation-duration: 5s;
+  }
+.animation-3-3 {
+    animation-delay: 3s;
+    animation-duration: 3s;
+  }
+.animation-7-4 {
+    animation-delay: 7s;
+    animation-duration: 4s;
+  }
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Montserrat:wght@400;600;700&display=swap');
 
@@ -882,23 +964,10 @@ video {
 	color: rgba(52, 211, 153, var(--tw-text-opacity));
 }
 
-.hover\:text-black:hover {
-	--tw-text-opacity: 1;
-	color: rgba(0, 0, 0, var(--tw-text-opacity));
-}
-
 @media (min-width: 768px) {
-
-	.md\:sticky {
-		position: sticky;
-	}
 
 	.md\:mb-20 {
 		margin-bottom: 5rem;
-	}
-
-	.md\:ml-12 {
-		margin-left: 3rem;
 	}
 
 	.md\:block {
@@ -916,45 +985,32 @@ video {
 	.md\:w-40 {
 		width: 10rem;
 	}
-
-	.md\:text-lg {
-		font-size: 1.125rem;
-		line-height: 1.75rem;
-	}
 }
 
 @media (min-width: 1024px) {
 
-	.lg\:inline-block {
-		display: inline-block;
+	.lg\:col-start-3 {
+		grid-column-start: 3;
 	}
 
-	.lg\:flex {
-		display: flex;
+	.lg\:col-start-6 {
+		grid-column-start: 6;
+	}
+
+	.lg\:col-start-4 {
+		grid-column-start: 4;
+	}
+
+	.lg\:block {
+		display: block;
 	}
 
 	.lg\:hidden {
 		display: none;
 	}
 
-	.lg\:w-auto {
-		width: auto;
-	}
-
-	.lg\:flex-grow {
-		flex-grow: 1;
-	}
-
-	.lg\:justify-start {
-		justify-content: flex-start;
-	}
-
-	.lg\:pb-0 {
-		padding-bottom: 0px;
-	}
-
-	.lg\:pt-1 {
-		padding-top: 0.25rem;
+	.lg\:grid-cols-6 {
+		grid-template-columns: repeat(6, minmax(0, 1fr));
 	}
 
 	.lg\:text-6xl {
