--- a/src/App.css
+++ b/src/App.css
@@ -627,11 +627,11 @@ video {
 	left: 0px;
 	right: 0px;
 }
-.top-0 {
-	top: 0px;
-}
 .bottom-0 {
 	bottom: 0px;
+}
+.top-0 {
+	top: 0px;
 }
 .right-0 {
 	right: 0px;
@@ -671,8 +671,17 @@ video {
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
 }
+.mt-60 {
+	margin-top: 15rem;
+}
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
 .mb-4 {
 	margin-bottom: 1rem;
+}
+.ml-6 {
+	margin-left: 1.5rem;
 }
 .mb-6 {
 	margin-bottom: 1.5rem;
@@ -698,14 +707,14 @@ video {
 .hidden {
 	display: none;
 }
-.h-full {
-	height: 100%;
-}
 .h-screen {
 	height: 100vh;
 }
 .h-8 {
 	height: 2rem;
+}
+.h-full {
+	height: 100%;
 }
 .min-h-85v {
 	min-height: 85vh;
@@ -732,15 +741,6 @@ video {
 .transform {
 	transform: var(--tw-transform);
 }
-@keyframes pulse {
-
-	50% {
-		opacity: .5;
-	}
-}
-.animate-pulse {
-	animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
 @keyframes bounce {
 
 	0%, 100% {
@@ -756,8 +756,20 @@ video {
 .animate-bounce {
 	animation: bounce 1s infinite;
 }
+@keyframes pulse {
+
+	50% {
+		opacity: .5;
+	}
+}
+.animate-pulse {
+	animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
 .cursor-pointer {
 	cursor: pointer;
+}
+.resize {
+	resize: both;
 }
 .grid-cols-4 {
 	grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -786,8 +798,15 @@ video {
 .rounded-lg {
 	border-radius: 0.5rem;
 }
+.border-2 {
+	border-width: 2px;
+}
 .border {
 	border-width: 1px;
+}
+.border-white {
+	--tw-border-opacity: 1;
+	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
 }
 .border-gray-400 {
 	--tw-border-opacity: 1;
@@ -796,14 +815,6 @@ video {
 .bg-black {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-.bg-gray-900 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-.bg-gray-800 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -816,6 +827,25 @@ video {
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+.bg-gray-900 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
+}
+.bg-gray-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
+.bg-gray-800 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+.bg-gray-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}
+.bg-opacity-90 {
+	--tw-bg-opacity: 0.9;
 }
 .bg-opacity-70 {
 	--tw-bg-opacity: 0.7;
@@ -832,13 +862,17 @@ video {
 .p-2 {
 	padding: 0.5rem;
 }
-.px-2 {
-	padding-left: 0.5rem;
-	padding-right: 0.5rem;
+.px-6 {
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
 }
 .py-2 {
 	padding-top: 0.5rem;
 	padding-bottom: 0.5rem;
+}
+.px-2 {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
 }
 .px-3 {
 	padding-left: 0.75rem;
@@ -847,9 +881,6 @@ video {
 .py-4 {
 	padding-top: 1rem;
 	padding-bottom: 1rem;
-}
-.pt-48 {
-	padding-top: 12rem;
 }
 .pt-16 {
 	padding-top: 4rem;
@@ -870,16 +901,16 @@ video {
 	font-size: 1.875rem;
 	line-height: 2.25rem;
 }
-.text-lg {
-	font-size: 1.125rem;
-	line-height: 1.75rem;
-}
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
 .text-xl {
 	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
+.text-lg {
+	font-size: 1.125rem;
 	line-height: 1.75rem;
 }
 .font-bold {
@@ -890,6 +921,9 @@ video {
 }
 .leading-normal {
 	line-height: 1.5;
+}
+.tracking-wider {
+	letter-spacing: 0.05em;
 }
 .text-red-700 {
 	--tw-text-opacity: 1;
@@ -906,10 +940,6 @@ video {
 .text-pink-600 {
 	--tw-text-opacity: 1;
 	color: rgba(219, 39, 119, var(--tw-text-opacity));
-}
-.text-gray-300 {
-	--tw-text-opacity: 1;
-	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 .text-red-600 {
 	--tw-text-opacity: 1;
@@ -954,9 +984,38 @@ video {
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Montserrat:wght@400;600;700&display=swap');
 
+.hover\:border-green-500:hover {
+	--tw-border-opacity: 1;
+	border-color: rgba(16, 185, 129, var(--tw-border-opacity));
+}
+
+.hover\:border-pink-500:hover {
+	--tw-border-opacity: 1;
+	border-color: rgba(236, 72, 153, var(--tw-border-opacity));
+}
+
+.hover\:bg-green-500:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+
+.hover\:bg-pink-500:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
+}
+
 .hover\:bg-gray-800:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+
+.hover\:bg-opacity-80:hover {
+	--tw-bg-opacity: 0.8;
+}
+
+.hover\:text-white:hover {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
 .hover\:text-green-400:hover {
@@ -1001,6 +1060,14 @@ video {
 		grid-column-start: 4;
 	}
 
+	.lg\:mb-6 {
+		margin-bottom: 1.5rem;
+	}
+
+	.lg\:ml-4 {
+		margin-left: 1rem;
+	}
+
 	.lg\:block {
 		display: block;
 	}
@@ -1013,9 +1080,28 @@ video {
 		grid-template-columns: repeat(6, minmax(0, 1fr));
 	}
 
+	.lg\:justify-start {
+		justify-content: flex-start;
+	}
+
+	.lg\:px-8 {
+		padding-left: 2rem;
+		padding-right: 2rem;
+	}
+
+	.lg\:py-3 {
+		padding-top: 0.75rem;
+		padding-bottom: 0.75rem;
+	}
+
 	.lg\:text-6xl {
 		font-size: 3.75rem;
 		line-height: 1;
+	}
+
+	.lg\:text-2xl {
+		font-size: 1.5rem;
+		line-height: 2rem;
 	}
 
 	.lg\:tracking-wider {
