--- a/src/App.css
+++ b/src/App.css
@@ -569,39 +569,6 @@ video {
 	--tw-ring-shadow: 0 0 #0000;
 	--tw-shadow: 0 0 #0000;
 }
-.container {
-	width: 100%;
-}
-@media (min-width: 640px) {
-
-	.container {
-		max-width: 640px;
-	}
-}
-@media (min-width: 768px) {
-
-	.container {
-		max-width: 768px;
-	}
-}
-@media (min-width: 1024px) {
-
-	.container {
-		max-width: 1024px;
-	}
-}
-@media (min-width: 1280px) {
-
-	.container {
-		max-width: 1280px;
-	}
-}
-@media (min-width: 1536px) {
-
-	.container {
-		max-width: 1536px;
-	}
-}
 .pointer-events-none {
 	pointer-events: none;
 }
@@ -674,6 +641,9 @@ video {
 .mt-60 {
 	margin-top: 15rem;
 }
+.ml-8 {
+	margin-left: 2rem;
+}
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
@@ -698,6 +668,9 @@ video {
 .inline-block {
 	display: inline-block;
 }
+.inline {
+	display: inline;
+}
 .flex {
 	display: flex;
 }
@@ -721,12 +694,6 @@ video {
 }
 .w-full {
 	width: 100%;
-}
-.w-5\/6 {
-	width: 83.333333%;
-}
-.w-screen {
-	width: 100vw;
 }
 .w-1\/2 {
 	width: 50%;
@@ -798,9 +765,6 @@ video {
 .rounded-lg {
 	border-radius: 0.5rem;
 }
-.border-2 {
-	border-width: 2px;
-}
 .border {
 	border-width: 1px;
 }
@@ -820,6 +784,10 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
+.bg-gray-800 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
 .bg-red-500 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
@@ -835,10 +803,6 @@ video {
 .bg-gray-700 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-.bg-gray-800 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 .bg-gray-600 {
 	--tw-bg-opacity: 1;
@@ -1025,6 +989,14 @@ video {
 
 @media (min-width: 768px) {
 
+	.md\:sticky {
+		position: sticky;
+	}
+
+	.md\:top-0 {
+		top: 0px;
+	}
+
 	.md\:mb-20 {
 		margin-bottom: 5rem;
 	}
@@ -1058,6 +1030,10 @@ video {
 
 	.lg\:col-start-4 {
 		grid-column-start: 4;
+	}
+
+	.lg\:ml-20 {
+		margin-left: 5rem;
 	}
 
 	.lg\:mb-6 {
