--- a/src/App.css
+++ b/src/App.css
@@ -568,6 +568,16 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 	--tw-shadow: 0 0 #0000;
+	--tw-blur: var(--tw-empty,/*!*/ /*!*/);
+	--tw-brightness: var(--tw-empty,/*!*/ /*!*/);
+	--tw-contrast: var(--tw-empty,/*!*/ /*!*/);
+	--tw-grayscale: var(--tw-empty,/*!*/ /*!*/);
+	--tw-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
+	--tw-invert: var(--tw-empty,/*!*/ /*!*/);
+	--tw-saturate: var(--tw-empty,/*!*/ /*!*/);
+	--tw-sepia: var(--tw-empty,/*!*/ /*!*/);
+	--tw-drop-shadow: var(--tw-empty,/*!*/ /*!*/);
+	--tw-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .aspect-w-1,
 .aspect-w-2,
@@ -658,11 +668,14 @@ video {
 .z-10 {
 	z-index: 10;
 }
-.col-span-2 {
-	grid-column: span 2 / span 2;
+.col-span-4 {
+	grid-column: span 4 / span 4;
 }
 .col-span-1 {
 	grid-column: span 1 / span 1;
+}
+.col-span-2 {
+	grid-column: span 2 / span 2;
 }
 .col-start-4 {
 	grid-column-start: 4;
@@ -694,6 +707,18 @@ video {
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
 }
+.mx-4 {
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+.mx-6 {
+	margin-left: 1.5rem;
+	margin-right: 1.5rem;
+}
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
 .mx-2 {
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
@@ -721,6 +746,12 @@ video {
 }
 .mb-8 {
 	margin-bottom: 2rem;
+}
+.mr-3 {
+	margin-right: 0.75rem;
+}
+.mr-6 {
+	margin-right: 1.5rem;
 }
 .mt-2 {
 	margin-top: 0.5rem;
@@ -760,6 +791,9 @@ video {
 }
 .w-1\/2 {
 	width: 50%;
+}
+.w-screen {
+	width: 100vw;
 }
 .-skew-y-12 {
 	--tw-skew-y: -12deg;
@@ -804,6 +838,9 @@ video {
 .grid-flow-row {
 	grid-auto-flow: row;
 }
+.grid-cols-5 {
+	grid-template-columns: repeat(5, minmax(0, 1fr));
+}
 .grid-cols-4 {
 	grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -819,6 +856,9 @@ video {
 .justify-center {
 	justify-content: center;
 }
+.gap-1 {
+	gap: 0.25rem;
+}
 .self-center {
 	align-self: center;
 }
@@ -833,6 +873,9 @@ video {
 }
 .border {
 	border-width: 1px;
+}
+.border-b {
+	border-bottom-width: 1px;
 }
 .border-white {
 	--tw-border-opacity: 1;
@@ -862,6 +905,14 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
 }
+.bg-green-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+.bg-gray-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
@@ -869,10 +920,6 @@ video {
 .bg-gray-900 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
-}
-.bg-gray-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
 }
 .bg-opacity-90 {
 	--tw-bg-opacity: 0.9;
@@ -894,6 +941,9 @@ video {
 }
 .object-cover {
 	object-fit: cover;
+}
+.object-fill {
+	object-fit: fill;
 }
 .object-center {
 	object-position: center;
@@ -928,6 +978,10 @@ video {
 	padding-top: 5rem;
 	padding-bottom: 5rem;
 }
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
 .pt-16 {
 	padding-top: 4rem;
 }
@@ -936,6 +990,9 @@ video {
 }
 .pt-10 {
 	padding-top: 2.5rem;
+}
+.pb-2 {
+	padding-bottom: 0.5rem;
 }
 .text-center {
 	text-align: center;
@@ -964,6 +1021,10 @@ video {
 .text-xl {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
+}
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
 }
 .font-bold {
 	font-weight: 700;
@@ -1003,6 +1064,9 @@ video {
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.filter {
+	filter: var(--tw-filter);
 }
 .transition {
 	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -1085,6 +1149,20 @@ video {
 		top: 0px;
 	}
 
+	.md\:col-span-2 {
+		grid-column: span 2 / span 2;
+	}
+
+	.md\:my-0 {
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+
+	.md\:mx-0 {
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+
 	.md\:mb-20 {
 		margin-bottom: 5rem;
 	}
@@ -1105,8 +1183,29 @@ video {
 		display: none;
 	}
 
+	.md\:w-full {
+		width: 100%;
+	}
+
 	.md\:grid-cols-4 {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+
+	.md\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+
+	.md\:gap-4 {
+		gap: 1rem;
+	}
+
+	.md\:p-4 {
+		padding: 1rem;
+	}
+
+	.md\:px-4 {
+		padding-left: 1rem;
+		padding-right: 1rem;
 	}
 
 	.md\:text-left {
@@ -1115,6 +1214,11 @@ video {
 
 	.md\:text-5xl {
 		font-size: 3rem;
+		line-height: 1;
+	}
+
+	.md\:text-6xl {
+		font-size: 3.75rem;
 		line-height: 1;
 	}
 }
