--- a/src/App.css
+++ b/src/App.css
@@ -804,6 +804,9 @@ video {
 .min-h-85v {
 	min-height: 85vh;
 }
+.min-h-100v {
+	min-height: 100vh;
+}
 .w-full {
 	width: 100%;
 }
@@ -928,6 +931,9 @@ video {
 .border-b {
 	border-bottom-width: 1px;
 }
+.border-b-2 {
+	border-bottom-width: 2px;
+}
 .border-white {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
@@ -936,13 +942,13 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
-.bg-gray-700 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
 .bg-gray-800 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+.bg-gray-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 .bg-gray-400 {
 	--tw-bg-opacity: 1;
@@ -982,9 +988,6 @@ video {
 .bg-opacity-80 {
 	--tw-bg-opacity: 0.8;
 }
-.bg-opacity-90 {
-	--tw-bg-opacity: 0.9;
-}
 .bg-opacity-70 {
 	--tw-bg-opacity: 0.7;
 }
@@ -994,11 +997,11 @@ video {
 .bg-fixed {
 	background-attachment: fixed;
 }
-.bg-scroll {
-	background-attachment: scroll;
-}
 .bg-top {
 	background-position: top;
+}
+.bg-bottom {
+	background-position: bottom;
 }
 .fill-current {
 	fill: currentColor;
@@ -1073,6 +1076,9 @@ video {
 .pb-8 {
 	padding-bottom: 2rem;
 }
+.pb-4 {
+	padding-bottom: 1rem;
+}
 .pt-10 {
 	padding-top: 2.5rem;
 }
@@ -1114,6 +1120,10 @@ video {
 	font-size: 1.875rem;
 	line-height: 2.25rem;
 }
+.text-8xl {
+	font-size: 6rem;
+	line-height: 1;
+}
 .font-bold {
 	font-weight: 700;
 }
@@ -1125,10 +1135,6 @@ video {
 }
 .tracking-wider {
 	letter-spacing: 0.05em;
-}
-.text-red-700 {
-	--tw-text-opacity: 1;
-	color: rgba(185, 28, 28, var(--tw-text-opacity));
 }
 .text-white {
 	--tw-text-opacity: 1;
@@ -1200,22 +1206,6 @@ video {
 .ease-in {
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
-.animation-1-3 {
-    animation-delay: 1s;
-    animation-duration: 3s;
-  }
-.animation-3-5 {
-    animation-delay: 3s;
-    animation-duration: 5s;
-  }
-.animation-3-3 {
-    animation-delay: 3s;
-    animation-duration: 3s;
-  }
-.animation-7-4 {
-    animation-delay: 7s;
-    animation-duration: 4s;
-  }
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Montserrat:wght@400;600;700&display=swap');
 
@@ -1387,6 +1377,10 @@ video {
 
 	.lg\:w-5\/6 {
 		width: 83.333333%;
+	}
+
+	.lg\:w-1\/3 {
+		width: 33.333333%;
 	}
 
 	.lg\:grid-cols-2 {
